Fix scrollbar

--- a/src/Gui/app.css
+++ b/src/Gui/app.css
@@ -17,14 +17,15 @@ button {
  */
 
 .funkly-container {
-    height: 100%;
-    width: 100%;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
     background: #fff0c5ff;
     display: grid;
     grid-template-columns: repeat(3, 33vw);
     grid-template-rows: repeat(10, 10vh);
     grid-column-gap: 0.5vw;
-    grid-row-gap: 0.5vh;
+    grid-row-gap: 0.0vh;
 }
 
 .funkly-title {
@@ -42,7 +43,7 @@ button {
 }
 
 .funkly-blockly-editor {
-    position:relative;
+    position: relative;
     grid-area: 2 / 1 / 11 / 3; 
 }
 
@@ -58,10 +59,12 @@ button {
     grid-area: 2 / 3 / 7 / 4;
 }
 
-.game-area {
+.funkly-game-area {
     background-color: #0571f5;
-    width: 575px;
-    height: 405px;
+    width: 600px;
+    height: 400px;
+    scale: 1.3;
+    transform-origin: top left;
 }
 
 .funkly-char-selection {
